# any-api

./: .flake8  .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  requirements-dev.txt  requirements.txt  tox.ini
any_api/asyncapi/: asyncapi.py
any_api/asyncapi/model/: asyncapi_model.py  operation_model.py
any_api/base_api/: base_api.py
any_api/base_api/model/: base_api_model.py
any_api/openapi/: __init__.py  openapi.py  openapi_v1.py
any_api/openapi/format/: markdown.py
any_api/openapi/model/: __init__.py  links.py  openapi_model.py  request_model.py  requests.py  response_model.py  responses.py  util.py
any_api/openapi/model/openapi/: __init__.py  basic.py  info.py  security.py
any_api/openapi/to/: markdown.py
any_api/openapi/web_ui/: __init__.py  elements.py  openapi_ui.py  rapidoc.py  redoc.py  scalar.py  swagger.py
any_api/util/: by_pydantic.py  i18n.py  pydantic_adapter.py  util.py
demo_v1/: demo.py  demo_v1.py  new_openapi.json  new_pet_store_openapi.json  old_openapi.json  old_pet_store_openapi.json
demo_v1/response/: __init__.py  aaa.py  bbb.py
example/: openapi.py  pet_store.py
tests/: conftest.py  test_pet_store.py  util.py
tests/test_lib/: test_util.py
